--- a/site/style.css
+++ b/site/style.css
@@ -137,6 +137,24 @@ a:hover {
   border-radius: 10px;
 }
 
+.bgc-section {
+  margin: 20px 0;
+  padding: 15px;
+  padding-bottom: 5px;
+  background-color: #eef5f4;
+  box-shadow: 0px 2px 5px .25px #444444;
+  border-radius: 10px;
+}
+
+.bgc-up {
+  width: fit-content;
+  margin: 15px 0;
+  padding: 10px;
+  border-radius: 5px;
+  background: rgb(174, 203, 206);
+  box-shadow: 0 0 3px 0px #444444;
+}
+
 .relative {
   position: relative;
 }
