--- a/site/style.css
+++ b/site/style.css
@@ -204,7 +204,7 @@ a:hover {
 }
 
 .shape-title {
-  padding: 5px 10px;
+  padding: 10px 20% 10px 10px;
   background-color: rgb(82, 124, 240);
   clip-path: polygon(0 0, 80% 0, 95% 100%, 0 100%);
 }
