--- a/site/style.css
+++ b/site/style.css
@@ -38,6 +38,7 @@ footer {
 
 .code {
   width: fit-content;
+  font-size: 1rem;
   padding: 10px;
   background-color: #000;
   color: rgb(231, 225, 204);
@@ -211,6 +212,10 @@ a:hover {
 
 /* Media queries */
 @media screen and (min-width: 1200px) {
+  body {
+    font-size: 1rem;
+  }
+
   .img-logo {
     max-width: 40%;
   }
