--- a/site/style.css
+++ b/site/style.css
@@ -268,6 +268,26 @@ a:hover {
   clip-path: polygon(0 0, 80% 0, 95% 100%, 0 100%);
 }
 
+.blquote-container {
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+}
+
+.img {
+  width: 300px;
+  height: 350px;
+  height: auto;
+}
+
+.blquote {
+  margin: 1em 0;
+}
+
+.link-a {
+  word-break: break-word;
+}
+
 /* Media queries */
 @media screen and (min-width: 500px) {
   body {
