--- a/site/style.css
+++ b/site/style.css
@@ -1,22 +1,21 @@
 html,
 body {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-size: .8rem;
+  line-height: 1.445;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 body {
-  width: 100%;
-  margin: 0 auto;
-  padding: 5px;
-  box-sizing: border-box;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-  font-size: .8rem;
-  line-height: 1.445;
-  background-color: #e3d18a;
+  /* background-color: #e3d18a; */
 }
 
 .container {
-  /* margin: 0 auto;
-  text-align: center; */
+  padding: 5px 15px;
+  text-align: center;
+  border-radius: 0 0 30px 30px;
 }
 
 .header-div {
@@ -92,12 +91,6 @@ footer {
   padding: 10px;
   background-color: #000;
   color: rgb(231, 225, 204);
-}
-
-.container {
-  padding: 5px 15px;
-  text-align: center;
-  border-radius: 0 0 30px 30px;
 }
 
 /* Placement flex box */
