--- a/site/style.css
+++ b/site/style.css
@@ -1,458 +1,30 @@
+/* Reset des styles par défauts */
 html,
 body {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-size: .8rem;
+  font-size: 2rem;
   line-height: 1.445;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-}
-
-body {
-  /* background-color: #e3d18a; */
-}
-
-.container {
-  padding: 5px 15px;
-  text-align: center;
-  border-radius: 0 0 30px 30px;
-}
-
-.header-div {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  text-align: left;
-}
-
-.div-header li {
-  margin-right: 10px;
-  padding: 5px 10px;
-  font-weight: 600;
-  background: #9599cc;
-  border-radius: 3px;
-  border: 1px solid rgba(0, 10, 255, .2);
-  color: #fff;
-  list-style-type: none;
-  display: inline-block;
-  transition: background-color .3s;
-}
-
-.div-header li:hover {
-  background: #9599cc9c;
-  text-decoration: underline;
-}
-
-.div-header ul {
-  display: flex;
-}
-
-.home {
-
-}
-
-.home::before {
-  content: "";
-  margin-right: 10px;
-  display: inline-block;
-  width: 25px;
-  height: 25px;
-  vertical-align: middle;
-  background:
-    url(../site/icons/home.svg) center center / contain no-repeat;
-}
-
-.return {
-  display: flex;
-  flex-flow: row wrap;
-  align-items: center;
-}
-
-.red {
-  color: #e20808;
-}
-
-footer {
-  padding: 3px;
-  background-color: #fff;
-  background-color: #e8d19d;
-  color: darkblue;
-  font-weight: bold;
-  text-align: center;
-}
-
-.doc-pdf {
-  font-size: .7em;
-}
-
-.code {
-  width: fit-content;
-  font-size: 1rem;
-  padding: 10px;
-  background-color: #000;
-  color: rgb(231, 225, 204);
-}
-
-/* Placement flex box */
-.flex-v-center {
-  display: flex;
-  flex-flow: column wrap;
-  /* justify-content: space-between; */
-  align-items: center;
-}
-
-.flex-h-center {
-  display: flex;
-  flex-flow: row wrap;
-  justify-content: center;
-  align-items: center;
-}
-
-/* --- */
-
-.img-logo {
-  position: relative;
-  width: 100%;
-  height: auto;
-  z-index: 0;
-  clip-path: polygon(0 0, 100% 0, 100% 100%, 0 80%);
-}
-
-.list {
-  padding: 0;
-}
-
-/* Pour liste */
-nav {
-  padding: 5px;
-  border-radius: 10px;
-  background-color: #f0d9a4;
-  box-shadow: 0 5px 5px 0px #83724b;
-}
-
-.ul-p17 {
-  padding: 0 17px;
-  color: ;
-}
-
-.li-empty {
-  margin: 0px 0;
-  padding: 0 10px;
-  line-height: 1.8;
-  list-style-type: none;
-}
-
-.li-empty li {
-  margin: 0px 0;
-  padding: 5px 0;
+  font-family: Montserrat, Tahoma, Verdana, sans-serif;
+  /* font-family: Verdana, Geneva, Tahoma, sans-serif; */
 }
 
 a {
-  padding: 5px 2px;
   text-decoration: none;
-  color: #093c5a;
-  transition: .2s ease-in-out;
 }
 
-a:hover {
-  font-size: .96em;
-  margin: 10px;
-  color: #0d3942;
-  opacity: .5;
-}
-
-.li-square {
-  list-style-type: square;
-}
-
-/* Bloc de cours */
-.training-bloc {
-  position: absolute;
-  top: 5%;
-  width: fit-content;
-  height: fit-content;
-  padding: 20px;
-  line-height: 2.5;
-  box-shadow: 0 5px 10px 0 #a09e9d;
-  background-color: rgb(217, 226, 243);
+ul,
+ol {
   list-style-type: none;
-  z-index: 1;
-  transition: .3s;
-  border-radius: 10px;
+  margin: 0;
+  padding: 0;
 }
 
-.bgc-section {
-  margin: 20px 0;
-  padding: 15px;
-  padding-bottom: 5px;
-  background-color: #eef5f4;
-  box-shadow: 0px 2px 5px .25px #444444;
-  border-radius: 10px;
+.container {
+  width: 90%;
+  margin: 0 auto;
+  /* padding: 5px 15px; */
+  /* text-align: center; */
+  /* border-radius: 0 0 30px 30px; */
 }
-
-.letterMaj {
-  margin: 0 0 10px;
-  font-size: 2em;
-}
-
-.lexLink {
-  font-weight: bold;
-  opacity: .8;
-}
-
-.bgc-up {
-  width: fit-content;
-  margin: 15px 0;
-  padding: 10px;
-  border-radius: 5px;
-  background: rgb(174, 203, 206);
-  box-shadow: 0 0 3px 0px #444444;
-}
-
-.relative {
-  position: relative;
-}
-
-.tab {
-  margin-left: 1rem;
-}
-
-.tabx2 {
-  margin-left: 2rem;
-}
-
-.tabx3 {
-  margin-left: 3rem;
-}
-
-.tabx4 {
-  margin-left: 4rem;
-}
-
-.tabx5 {
-  margin-left: 5rem;
-}
-
-.tabx6 {
-  margin-left: 6rem;
-}
-
-.tabx7 {
-  margin-left: 7rem;
-}
-
-.tabx8 {
-  margin-left: 8rem;
-}
-
-/* Pour carte */
-.card {
-  width: 45%;
-  height: auto;
-  margin: 10px;
-  box-shadow: 0 5px 10px 0 #a09e9d;
-  background-color: rgb(217, 226, 243);
-  transition: .3s;
-  border-radius: 0 0 30px 30px;
-}
-
-.card:hover {
-  box-shadow: 0 10px 20px 0 #a09e9d;
-}
-
-.card p {
-  margin-top: 0;
-  margin-bottom: 10px;
-}
-
-/* Titre et sous-titre */
-.sub-title-h2 {
-  margin: 0px 10px 0;
-  color: cadetblue;
-}
-
-.sub-title-h3, .console {
-  color: darkcyan;
-}
-
-.comment {
-  color: #088d1e;
-}
-
-.title-h4 {
-  margin: 10px 0;
-}
-/* --------- */
-
-.size-logo {
-  width: 100%;
-  height: auto;
-}
-
-.shape-title {
-  padding: 10px 20% 10px 10px;
-  background-color: rgb(82, 124, 240);
-  clip-path: polygon(0 0, 80% 0, 95% 100%, 0 100%);
-}
-
-.blquote-container {
-  display: flex;
-  flex-flow: column;
-  align-items: center;
-}
-
-.img {
-  width: 300px;
-  height: 350px;
-  height: auto;
-}
-
-.code-inline {
-  font-size: 1.5em;
-  font-weight: bold;
-}
-
-.blquote {
-  margin: 1em 0;
-}
-
-.link-a {
-  word-break: break-word;
-}
-
-/* Media queries */
-@media screen and (min-width: 500px) {
-  body {
-    width: 90%;
-  }
-}
-@media screen and (min-width: 1200px) {
-  body {
-    font-size: 1rem;
-  }
-
-  .img-logo {
-    max-width: 40%;
-  }
-}
-
-/* 
-.flex-row {
-  display: flex;
-  flex-flow: row wrap;
-  justify-content: center;
-  align-items: center;
-}
-
-.summary, .footer {
-  margin: 30px 0;
-  padding: 1rem;
-  border-radius: 5px;
-  box-shadow: 0 0 10px 5px #c8c8c8;
-}
-
-.summary {
-  height: auto;
-} */
-
-  /* 
-  .main-scrolling {
-    font-weight: bolder;
-  }
-
-  .under, .under1 {
-    display: none;
-  }
-
-  .under > ul {
-    font-weight: bold;
-    display: flex;
-    flex-flow: column wrap;
-  }
-
-  ul {
-    list-style-type: none;
-  }
-
-  li:hover .under, .sub-li:hover .under1 {
-    padding: 10px;
-    font-weight: normal ;
-    display: block;
-  }
-
-  .footer {
-    margin-top: 20px;
-    padding: 10px;
-    height: auto;
-    font-size: .8em;
-    text-align: center;
-  }
-
-
-  .title-h1, .sub-title-h2, .sub-title-h3 {
-    margin: 0;
-  }
-
-  .dt  {
-    font-weight: bold;
-  }
-
-  .dd {
-    margin-bottom: 10px;
-  }
-
-  a {
-    color: black;
-    text-decoration: none;
-    opacity: 1;
-  }
-
-  a:hover {
-    opacity: .5;
-  }
-
-  a:visited {
-    color: #000;
-  }
-
-  .art-box {
-    background-color: #e7e7e7;
-  }
-
-  li {
-    margin: 0 10px;
-  }
-
-  .summary ul {
-    width: auto;
-    list-style-type: none;
-    padding: 0;
-    display: flex;
-    justify-content: flex-start;
-    padding-left: 5px;
-  }
-
-  #img-internet {
-    display: none;
-  }
-
-  @media screen and (max-width: 600px) {
-    .summary ul {
-      display: flex;
-      flex-flow: column;
-      line-height: 2;
-    }
-  }
-
-  @media screen and (min-width: 768px) {
-    #img-internet {
-      margin: 30px auto;
-      width: 500px;
-      height: auto;
-      display: block;
-    }
-
-    .section {
-      display: grid;
-    }
-  } */
