--- a/site/style.css
+++ b/site/style.css
@@ -1,30 +1,133 @@
+/* --- Variables globales --- */
+:root {
+  --fontSzMain: .9rem;
+  --colorBreadCrump: #949494;
+  --colorBreadCrumpHover : #cfcfcf;
+  --colorBreadCrumpActive : #ebecec;
+  --colorAnchor: #353535;
+  --bgcHeader: #0a0a0a;
+}
+
 /* Reset des styles par défauts */
-html,
+/* http://meyerweb.com/eric/tools/css/reset/ */
+/* v1.0 | 20080212 */
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, font, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	outline: 0;
+	font-size: 100%;
+	vertical-align: baseline;
+	background: transparent;
+}
 body {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-  font-size: 2rem;
-  line-height: 1.445;
-  font-family: Montserrat, Tahoma, Verdana, sans-serif;
-  /* font-family: Verdana, Geneva, Tahoma, sans-serif; */
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
 }
 
 a {
   text-decoration: none;
 }
 
-ul,
-ol {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
+/* remember to define focus styles! */
+:focus {
+	outline: 0;
 }
 
-.container {
-  width: 90%;
-  margin: 0 auto;
-  /* padding: 5px 15px; */
-  /* text-align: center; */
-  /* border-radius: 0 0 30px 30px; */
+/* remember to highlight inserts somehow! */
+ins {
+	text-decoration: none;
 }
+del {
+	text-decoration: line-through;
+}
+
+/* tables still need 'cellspacing="0"' in the markup */
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+/* --- Anchor --- */
+a {
+  color: var(--colorAnchor);
+  transition: .3s;
+}
+
+a:hover {
+  text-decoration: underline;
+  color: red;
+}
+/* --- */
+
+.container {
+  width: 100%;
+  margin: 0 auto;
+}
+
+.header-nav {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.bgc-header {
+  background-color: var(--bgcHeader);
+  box-shadow: 0 2px 8px 0px #afafaf59;
+}
+
+.nav-summary {
+  display: flex;
+  flex-flow: column wrap;
+}
+
+/* BreadCrump */
+.breadcrumb {
+  padding: 1%;
+}
+
+.breadcrumb li {
+  font-weight: bold;
+  color: var(--colorBreadCrump);
+  padding: 5px;
+  transition: .3s;
+}
+
+.breadcrumb li:hover {
+  transform: translateX(-5px);
+}
+
+.breadcrumb a:hover {
+  text-decoration: none;
+  color: var(--colorBreadCrumpHover);
+}
+
+.breadcrumb-divider:after {
+  content: "/";
+  padding: 0 .5em ;
+}
+
+.breadcrumb .active {
+  /* margin-left: 5px; */
+  font-weight: bold;
+  color: var(--colorBreadCrumpActive);
+}
+/* --- */
