--- a/site/style.css
+++ b/site/style.css
@@ -1,3 +1,5 @@
+@import url(../site/reset-all-css.css);
+
 /* --- Variables globales --- */
 :root {
   --fontSzMain: .9rem;
@@ -7,77 +9,6 @@
   --colorAnchor: #353535;
   --bgcHeader: #0a0a0a;
 }
-
-/* Reset des styles par défauts */
-/* http://meyerweb.com/eric/tools/css/reset/ */
-/* v1.0 | 20080212 */
-
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, font, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	outline: 0;
-	font-size: 100%;
-	vertical-align: baseline;
-	background: transparent;
-}
-body {
-	line-height: 1;
-}
-ol, ul {
-	list-style: none;
-}
-blockquote, q {
-	quotes: none;
-}
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
-}
-
-a {
-  text-decoration: none;
-}
-
-/* remember to define focus styles! */
-:focus {
-	outline: 0;
-}
-
-/* remember to highlight inserts somehow! */
-ins {
-	text-decoration: none;
-}
-del {
-	text-decoration: line-through;
-}
-
-/* tables still need 'cellspacing="0"' in the markup */
-table {
-	border-collapse: collapse;
-	border-spacing: 0;
-}
-
-/* --- Anchor --- */
-a {
-  color: var(--colorAnchor);
-  transition: .3s;
-}
-
-a:hover {
-  text-decoration: underline;
-  color: red;
-}
-/* --- */
 
 .container {
   width: 100%;
@@ -89,9 +20,24 @@ a:hover {
   justify-content: flex-end;
 }
 
+/* Titre */
+.title-h1 {
+  font-size: 1.5em;
+}
+/* --- */
+
 .bgc-header {
   background-color: var(--bgcHeader);
   box-shadow: 0 2px 8px 0px #afafaf59;
+}
+
+main {
+  display: flex;
+}
+
+.summary-section {
+  margin: 1em;
+  width: 50%;
 }
 
 .nav-summary {
