--- a/site/style.css
+++ b/site/style.css
@@ -6,10 +6,14 @@
   --colorBreadCrump: #949494;
   --colorBreadCrumpHover : #cfcfcf;
   --colorBreadCrumpActive : #ebecec;
-  --colorAnchor: #9b9b9b;
+  --colorAnchor: #747474;
   --bgcHeader: #0a0a0a;
   --bgcFooter: #272727;
   --bgcCard: #f8f8f8;
+}
+
+html {
+  background-color: #353535;
 }
 
 .container {
@@ -30,8 +34,8 @@
 }
 
 .flex-end {
-  /* display: flex;
-  justify-content: flex-end; */
+  display: flex;
+  justify-content: flex-end;
 }
 
 .bgc-header {
@@ -77,7 +81,8 @@
 }
 
 .card {
-  height: 800px;
+  width: 70%;
+  height: auto;
   margin: .2em auto;
   padding: 2em;
   background-color: var(--bgcCard);
@@ -140,15 +145,11 @@ li {
   }
 
   .container {
-    width: 80%;
+    /* width: 80%; */
   }
 
   .bgc-header {
     box-shadow: none;
-  }
-
-  .card {
-    width: 70%;
   }
 
   body {
