--- a/site/style.css
+++ b/site/style.css
@@ -9,7 +9,7 @@
   --colorAnchor: #747474;
   --bgcHeader: #0a0a0a;
   --bgcFooter: #272727;
-  --bgcCard: #f8f8f8;
+  --bgcCard: #f2f7f8;
 }
 
 html {
@@ -23,14 +23,33 @@ html {
 
 /* Titre */
 .title-h1 {
+  color: #0a3c52;
   margin-top: 0;
-  margin-bottom: 25px;
-  font-size: 1.5em;
+  margin-bottom: 10px;
+  font-size: 1.7em;
+}
+
+.title-h2 {
+  color: #1f4758;
+  margin-top: 0;
+  margin-bottom: 10px;
+  font-size: 1.2em;
+}
+
+.title-h3 {
+  color: #4d7c91;
+  margin-top: 0;
+  margin-bottom: 10px;
+  font-size: 1em;
 }
 /* --- */
 
 .txt-center {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   text-align: center;
+  margin-bottom: 25px;
 }
 
 .flex-end {
@@ -63,7 +82,7 @@ html {
 }
 
 .bgc-main > section {
-  margin-top: 25%;
+  margin-top: 40%;
 }
 
 .nav-summary {
@@ -77,17 +96,35 @@ html {
 }
 
 .margin-content {
-  padding: 5em 1em;
+  padding: 5em .5em;
 }
 
 .card {
-  width: 70%;
+  width: 100%;
   height: auto;
   margin: .2em auto;
-  padding: 2em;
+  padding: 2em 1em;
   background-color: var(--bgcCard);
   box-shadow: 0 0 15px 8px #49494959;
   border-radius: .8em;
+}
+
+/* Code */
+.code-block {
+  width: fit-content;
+  margin: 15px 0;
+  padding: 8px;
+  background-color: rgb(24, 24, 24);
+  color:  rgb(235, 235, 235);
+  font-size: .9em;
+}
+
+.code-yellow {
+  color: #eeba11;
+}
+
+.code-blue {
+  color: #789be9;
 }
 
 /* BreadCrump */
@@ -124,7 +161,26 @@ li {
   font-weight: bold;
   color: var(--colorBreadCrumpActive);
 }
+
+.breadcrumb .active:hover {
+  transform: none;
+}
 /* --- */
+
+.returnSummary {
+  width: fit-content;
+  border-radius: 5px;
+  background: #ece0c3;
+  border: 1px solid #bead85;
+  padding: 8px;
+  font-size: .8em;
+  font-weight: bold;
+}
+
+.returnSummary a:hover {
+  text-decoration: none;
+  color: #3a3939;
+}
 
 @media screen and (min-width: 800px) {
   .breadcrumb {
@@ -139,9 +195,25 @@ li {
   .breadcrumb li:hover {
     transform: translateY(-5px);
   }
+  .breadcrumb .active:hover {
+    transform: none;
+  }
 
   .title-h1 {
+    margin: 0;
     font-size: 2em;
+  }
+
+  .title-h2 {
+    color: #043862;
+    margin: 25px 0 10px 0 ;
+    font-size: 1.2em;
+  }
+
+  .title-h3 {
+    color: #4595d6;
+    margin: 15px 0 10px 0 ;
+    font-size: 1em;
   }
 
   .container {
