--- a/site/style.css
+++ b/site/style.css
@@ -65,7 +65,7 @@ body {
 
 .nav-menu {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: 1fr;
   grid-template-rows: repeat(3, 1fr);
   align-items: center;
   grid-gap: 10px;
