--- a/site/style.css
+++ b/site/style.css
@@ -16,6 +16,8 @@
 html,
 body {
   box-sizing: border-box;
+  width: 100%;
+  height: 100%;
   background-color: #353535;
 }
 
@@ -26,7 +28,12 @@ body {
 
 .container {
   width: 100%;
+  max-height: 100%;
   margin: 0 auto;
+}
+
+.main-title {
+  height: 700px;
 }
 
 /* POSITIONNEMENT */
@@ -46,10 +53,10 @@ body {
 
 /* NAVIGATION */
 .nav-header {
-  margin: 10px 5px;
-  display: grid;
-  grid-template-columns: .5fr 1fr;
-  grid-template-rows: 1fr;
+  margin: 2% 5%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 /* ASIDE */
@@ -85,7 +92,7 @@ li {
 .breadcrumb {
   display: flex;
   flex-flow: row wrap;
-  justify-content: flex-start;
+  justify-content: flex-end;
   align-items: center;
 }
 
@@ -106,8 +113,18 @@ li {
 }
 
 .arrow-left {
+  max-width: 30%;
   border-radius: 100%;
   transition: .3s;
+}
+
+#navigation {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-evenly;
+  align-items: center;
+  align-content: flex-start;
+  gap: 15px;
 }
 
 .arrow-left:hover {
